Fix error-level highlight bleeding through sticky header

--- a/src/sentry/static/sentry/less/stream.less
+++ b/src/sentry/static/sentry/less/stream.less
@@ -4,7 +4,9 @@
 */
 
 .sticky {
-  z-index: 1000;
+  // !important because react-sticky uses inline styles w/ hardcoded z-index
+  z-index: 1000 !important;
+
   .group-header {
     margin-left: 220px;
     margin-right: 20px;
